# python-monorepo-template

./: python-monorepo-template.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pipeline.yml
py/: .gitignore
py/api/: pyproject.toml
py/api/api/: app.py  main.py
py/libs/: pyproject.toml
py/libs/libs/core/handlers/: save_address_handler.py
py/libs/libs/core/models/: address.py
py/libs/libs/core/services/: address_repository.py
py/libs/libs/infrastructure/services/: memory_address_repository.py
py/libs/tests/: test_libs.py
py/libs/tests/core/handlers/: test_save_address_handler.py
py/libs/tests/core/models/: test_address.py
py/libs/tests/infrastructure/services/: test_memory_address_repository.py
tasks/ci/: build_py  build_py.Dockerfile  docker-compose.yml
