[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["tsukiy0 <tsukiy0@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
libs = {path = "../libs", develop = true}
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
